--- a/package.json
+++ b/package.json
@@ -3,12 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
+    "dotenv": "^16.0.3",
+    "firebase": "^9.15.0",
+    "gsap-trial": "^3.11.3",
+    "loaders.css": "^0.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.0",
+    "react-loaders": "^3.0.1",
+    "react-particles": "^2.9.3",
+    "react-router": "^6.4.5",
+    "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-tagcloud": "^2.3.1",
+    "react-typewriter-effect": "^1.1.0",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
+    "tag-cloud": "^1.3.3",
+    "TagCloud": "^2.2.0",
+    "tsparticles": "^2.9.3",
+    "tsparticles-engine": "^2.9.3",
+    "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
