--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "animate.css": "^4.1.1",
     "dotenv": "^16.0.3",
     "firebase": "^9.15.0",
+    "gsap": "^3.13.0",
     "gsap-trial": "^3.11.3",
     "loaders.css": "^0.1.2",
     "react": "^18.2.0",
